# minishell

./: .gitignore  CMakeLists.txt  Makefile  enviminishell  execute_all_cmds_utils.c  execute_cmd.c  expand  megapute  minishell  pipex.c  pipex.h  test1  utils.c
head/: builtins.h  execute_cmd_line.h  expand.h  expand_content.h  expand_token.h  lexer.h  minishell.h  pipex.h
libft/: Makefile
libft/head/: ft_printf.h  get_next_line.h  libft.h
libft/src/: can_be_converted_to_long.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_dup_arr.c  ft_dup_tab.c  ft_free_arr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isset.c  ft_isspace.c  ft_itoa.c  ft_lst_to_arr.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstpop_back.c  ft_lstpop_front.c  ft_lstsize.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_old_split.c  ft_print_hexa.c  ft_print_int.c  ft_printf.c  (+45 more)
src/: builtin_cd.c  builtin_cd_utils.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_unset.c  builtins.c  builtins_cd_pwd.c  builtins_echo.c  builtins_pwd.c  case_current_token_type_is_exec_name.c  check_path.c  check_terminal.c  cmd_utils.c  convert_token_lst_into_cmd_lst.c  convert_token_lst_into_to_exec_lst.c  create_env.c  debug_utils.c  env_var_utils.c  env_var_utils_getters_and_setters.c  error_handling.c  exec_utils.c  execute_all_cmds.c  execute_all_cmds.old  execute_all_cmds_utils.c  execute_cmd.c  execute_cmd_line.c  execute_cmd_line.old  execute_cmd_line_utils.c  execute_cmd_utils.c  expand.c  expand_content.c  expand_content_utils.c  expand_token.c  expand_token_utils.c  expand_tokens_from_list.c  expand_utils.c  fds.c  get_path.c  get_path_utils.c  (+21 more)
src/builtins/: builtin_cd.c  builtin_env.c  builtin_unset.c  builtins_echo.c
src/env/: create_env.c  env_var_utils_getters_and_setters.c  keyval_utils.c
src/execution/: check_path.c  cmd_utils.c  convert_token_lst_into_cmd_lst.c  convert_utils.c  exec_utils.c  execute_cmd.c  execute_cmd_line.c  execute_cmd_line_utils.c  execute_cmd_utils.c  get_path.c  get_path_utils.c
src/exit_code/: exit_code_handler.c
src/expands/: expand_utils.c  expand_with_value.c
src/heredoc/: heredoc_manager.c
src/lexer/: lexer.c  lexer_utils.c  main_token_parsing.c  main_token_utils.c
src/prompt/: prompt.c
src/signals/: signal_handling.c  terminal_handling.c
