cmake_minimum_required(VERSION 3.24)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(head)
include_directories(libft/head)

add_executable(minishell
        head/minishell.h
        libft/head/ft_printf.h
        libft/head/get_next_line.h
        libft/head/libft.h
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_calloc.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_isset.c
        libft/src/ft_isspace.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd_back.c
        libft/src/ft_lstadd_front.c
        libft/src/ft_lstclear.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstlast.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_lstpop_back.c
        libft/src/ft_lstpop_front.c
        libft/src/ft_lstsize.c
        libft/src/ft_max.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_print_hexa.c
        libft/src/ft_print_int.c
        libft/src/ft_printf.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_base_unsigned.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_realloc.c
        libft/src/ft_split.c
        libft/src/ft_split_destroy.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlcpy.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strndup.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strstr.c
        libft/src/ft_strtrim.c
        libft/src/ft_substr.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/get_next_line.c
        libft/src/get_next_line_utils.c
        src/minishell.c
        src/execute_cmd_line.c
        head/execute_cmd_line.h
        src/utils.c
        src/parser.c
        src/get_path.c
        src/execute_cmd.c
        src/execute_all_cmds_utils.c
        src/execute_all_cmds.c
        src/tokenize.c src/token_utils.c src/get_sample_tokens.c src/token_parsing.c src/convert_token_lst_into_to_exec_lst.c)
